Some part of glint and some \todo box fixed

--- a/Appendix.tex
+++ b/Appendix.tex
@@ -7,10 +7,13 @@
 \renewcommand{\thesection}{\Alph{section}}
 
 \section{Lab Measurements}
+\label{sec:labmea} 
 
-blah, blah, blah
+Spectrophotometric methods
 
 \section{Field Measurements}
-\section{Landsat-8 Sensor Characteristics}
+\label{sec:fieldmea}
+
+method described by \cite{Mobley:1999} for measuring the spectra of the downwelling irradiance $E_d$, the surface reflected sky radiance $L_s$, and the water-leaving radiance $L_w$ for each site 
+
 \section{HydroLight Specification}
-\section{MODTRAN Specification}
