--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -1,5 +1,5 @@
 % \documentclass[draft]{book}
-\documentclass[draft]{book}
+\documentclass[]{book}
 
 \usepackage{graphicx}
 
@@ -204,7 +204,7 @@
 \include{Acronyms} % to include Acronyms.tex
 
 % Added 11-15-13 ----------------------------------------
-\includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology,Results} 
+\includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology,Results,Summary,Appendix} 
 % \includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology,Summary,Results,Appendix}
 
 %******************************************************************************************************
