Methodology until MoB-ELM done. Abstract corrected with Dr. Schott corrections.

--- a/Acronyms.tex
+++ b/Acronyms.tex
@@ -112,3 +112,7 @@
 \newacronym{rhot}{$\rho_t$}{sensor-reaching reflectance}
 
 \newacronym{rhow}{$\rho_w$}{water-leaving reflectance}
+
+\newacronym{roi}{ROI}{region of interest}
+
+\newacronym{pif}{PIF}{pseudo-invariant feature}
