--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -1,5 +1,5 @@
 % \documentclass[draft]{book}
-\documentclass[]{book}
+\documentclass[draft]{book}
 
 \usepackage{graphicx}
 
@@ -277,18 +277,18 @@ The Mob-ELM employs pseudo invariant feature (PIF) pixels extracted from a refle
 %
 We used a look-up-table-based (LUT-based) inversion methodology to simultaneously retrieve CPAs.
 %
-The LUT of remote-sensing reflectance spectra was created in Hydrolight using IOPs measured in the field.
+The LUT of remote-sensing reflectance spectra was created in Hydrolight using inherent optical properties (IOPs) measured in the field.
 
 % Results
-The retrieval algorithm was applied over two~\todo{maybe three} Landsat 8 scenes.
+The retrieval algorithm was applied over three~\todo{three?} Landsat 8 scenes.
 %
 The CPA concentration maps exhibit expected trends of low concentrations in clear waters and higher concentrations in turbid waters. 
 %
-We estimated a normalized root mean squared error (NRMSE) of about $10\%$ for Chlorophyll-{\it a} and total suspended solid (TSS), and about $5\%$ for colored dissolved organic matter (CDOM) when compared with ground-truth data. 
+We estimated a normalized root mean squared error (NRMSE) of about $10\%$ for Chlorophyll-{\it a} and total suspended solid (TSS), and about $5\%$ for colored dissolved organic matter (CDOM) when compared with {\it in situ} data. 
 % Conclusions
 These results demonstrate that the developed algorithm allows the simultaneous mapping of concentration of all CPAs in Case 2 waters and over areas where the standard algorithms are not available due to spatial resolution.
 %
-Therefore, this study shows that the Landsat 8 satellite can be utilized over Case 2 waters as long as a careful atmospheric correction is applied. 
+Therefore, this study shows that the Landsat 8 satellite can be utilized over Case 2 waters as long as a careful atmospheric correction is applied and IOPs are known. 
 
 % Background/motivation/context
 % Aim/objectives(s)/problem statement
