Fix appendix by chapters

--- a/Appendix.tex
+++ b/Appendix.tex
@@ -1,19 +1,38 @@
 % !TEX root=Thesis_PhD.tex 
 % the previous is to reference main.bib
 %% CHAPTER
-\appendix
-\chapter*{Appendix}
-\addcontentsline{toc}{chapter}{Appendix}
-\renewcommand{\thesection}{\Alph{section}}
+\begin{appendices}
+% @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+\chapter{Field Measurements}
+% \addcontentsline{toc}{chapter}{Appendix}
+% \renewcommand{\thesection}{\Alph{section}}
+% @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+\label{ch:fieldmea}
+% -----------------------------------------------------------------------------
+\section{$R_{rs}$}
+% -----------------------------------------------------------------------------
+\section{Water Samples}
 
-\section{Lab Measurements}
-\label{sec:labmea} 
-
+% @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+\chapter{Lab Measurements}
+\label{ch:labmea} 
+% -----------------------------------------------------------------------------
+\section{IOPs}
+\subsection{Chlorophyll}
 Spectrophotometric methods
+\subsection{Minerals}
 
-\section{Field Measurements}
-\label{sec:fieldmea}
+\subsection{CDOM}
+% -----------------------------------------------------------------------------
+\section{Concentrations}
+\subsection{Chlorophyll-{\it a}}
+
+\subsection{TSS}
+
+
 
 method described by \cite{Mobley:1999} for measuring the spectra of the downwelling irradiance $E_d$, the surface reflected sky radiance $L_s$, and the water-leaving radiance $L_w$ for each site 
+% @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+\chapter{HydroLight Specification}
 
-\section{HydroLight Specification}
+\end{appendices}
