--- a/Methodology.tex
+++ b/Methodology.tex
@@ -429,7 +429,7 @@ Because the Landsat reflectance products was not available for Landsat 8 at the 
 \label{subsubsec:blackpixel}
 The reflectance spectra for the dark pixel is obtained from Ecolight, which is a version of Hydrolight that runs faster because it only calculates the radiance for the nadir angle and not in all directions (\cite{MobleyHEtech}). This Ecolight run represents a ROI present in the Landsat 8 radiance image. IOPs and concentrations measurements taken in the field from the same ROI are input to Ecolight. The Case 2 model in Ecolight is used to generate a remote sensing reflectance ($R_{rs}$). This model is a generic four-component (pure water, chlorophyll-bearing particles, CDOM, and mineral particles) IOP model \cite{MobleyHEtech}. The Case 2 model in Ecolight requires to specify the IOPs of each component one at a time. This includes concentration, absorption and scattering coefficient spectra and phase function for each component. It is worthy to mention that in this research, the concentrations and absorption coefficients for each CPA are measured, scattering coefficients were available from previous work, but phase function for each CPA was not measured, neither available. Therefore, the phase function information needs to be determined (page \pageref{pag:phasefn}). The IOPs for each CPA provided to Ecolight that are used to generate the reflectance spectra for the dark pixel are explained below.
 
-\autoref{tab:ONTNSconc} shows the constituent concentration for two different water samples from the data collection on September, 19th, 2013. These concentration were obtained from lab measurement at RIT (see Appendix~\ref{sec:labmea} for details about lab measurements). These water samples were collected from the nearshore of Lake Ontario (labeled as ONTNS) and from the southern part of Long Pond (labeled as LONGS), and they represent two scenarios with totally different characteristics. The water sample ONTNS was used to generate the reflectance spectra for the dark pixel in Ecolight. The concentrations for each component were set to be constant with depth with the values shown in \autoref{tab:ONTNSconc}. 
+\autoref{tab:ONTNSconc} shows the constituent concentration for two different water samples from the data collection on September, 19th, 2013. These concentration were obtained from lab measurement at RIT (see Appendix~\ref{ch:labmea} for details about lab measurements). These water samples were collected from the nearshore of Lake Ontario (labeled as ONTNS) and from the southern part of Long Pond (labeled as LONGS), and they represent two scenarios with totally different characteristics. The water sample ONTNS was used to generate the reflectance spectra for the dark pixel in Ecolight. The concentrations for each component were set to be constant with depth with the values shown in \autoref{tab:ONTNSconc}. 
 \vspace{.5cm}
 \begin{table}[!ht]
 \caption{ Water samples concentration for the September, 19th, 2013 collections. \label{tab:ONTNSconc} } 
@@ -442,7 +442,7 @@ LONGS & 112.76 & 1.1953 & 46.0\\
  \end{tabular}
 \end{table}
 
-The absorption properties for the component chlorophyll were input by user-supplied data files containing mass-specific absorption coefficients as a function of wavelength. This mass-specific absorption spectra are shown in \autoref{fig:CHLabast}.(a). These data were obtained from lab measurements of absorption coefficient spectra for the water sample ONTNS with a spectrophotometric method (see Appendix~\ref{sec:labmea} for method details). The spectrophotometric method yields absorption coefficients, which are converted to mass-specific absorption coefficients by dividing the absorption coefficient spectra by the concentration. This chlorophyll concentration was determined in lab by a spectrophotometric method as well. For the chlorophyll scattering properties, the same mass-specific scattering coefficient data used in \cite{Raqueno:2000} and \cite{Raqueno:2003} were utilized. These data are shown in \autoref{fig:CHLabast}.(b). A Fournier-Forand (FF) phase function with backscatter fraction 0.010 was selected as the phase function for the chlorophyll. The details about the selection of this phase function will be described below (page \pageref{pag:phasefn}).
+The absorption properties for the component chlorophyll were input by user-supplied data files containing mass-specific absorption coefficients as a function of wavelength. This mass-specific absorption spectra are shown in \autoref{fig:CHLabast}.(a). These data were obtained from lab measurements of absorption coefficient spectra for the water sample ONTNS with a spectrophotometric method (see Appendix~\ref{ch:labmea} for method details). The spectrophotometric method yields absorption coefficients, which are converted to mass-specific absorption coefficients by dividing the absorption coefficient spectra by the concentration. This chlorophyll concentration was determined in lab by a spectrophotometric method as well. For the chlorophyll scattering properties, the same mass-specific scattering coefficient data used in \cite{Raqueno:2000} and \cite{Raqueno:2003} were utilized. These data are shown in \autoref{fig:CHLabast}.(b). A Fournier-Forand (FF) phase function with backscatter fraction 0.010 was selected as the phase function for the chlorophyll. The details about the selection of this phase function will be described below (page \pageref{pag:phasefn}).
 \begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
     \centering
@@ -459,7 +459,7 @@ The absorption properties for the component chlorophyll were input by user-suppl
   % \caption{Chlorophyll mass-specific scattering spectra used for the determination of the reflectance spectra of the dark pixel in HydroLight. \label{fig:CHLabast}} 
 \end{figure}
 
-For the CDOM component, the absorption specification was the following. First, the absorption coefficients were determined by spectrophotometric measurements in lab for the ONTNS water sample (see Appendix~\ref{sec:labmea} for details about lab measurements). These data are shown in \autoref{fig:CDOM_IOP}.(a). Then, the data were normalized by the absorption value $a(\lambda_0)=0.1151[1/m]$ at the reference wavelength $\lambda_0=440nm$, so that $a^*(\lambda_0)=1$. These normalized data are shown in \autoref{fig:CDOM_IOP}.(b) as purple dots. An exponential curve with the following equation
+For the CDOM component, the absorption specification was the following. First, the absorption coefficients were determined by spectrophotometric measurements in lab for the ONTNS water sample (see Appendix~\ref{ch:labmea} for details about lab measurements). These data are shown in \autoref{fig:CDOM_IOP}.(a). Then, the data were normalized by the absorption value $a(\lambda_0)=0.1151[1/m]$ at the reference wavelength $\lambda_0=440nm$, so that $a^*(\lambda_0)=1$. These normalized data are shown in \autoref{fig:CDOM_IOP}.(b) as purple dots. An exponential curve with the following equation
 \begin{equation}
 	\label{eq:CDOMabs}
 	a^*(\lambda)=a^*(\lambda_0)\exp{\left[-\gamma(\lambda-\lambda_0)\right]}
@@ -482,7 +482,7 @@ was fitted to the normalized data. It was determined that the decay constant $\g
   % \caption{CDOM mass-specific absorption spectra used for the determination of the reflectance spectra of the dark pixel in HydroLight. \label{fig:CDOMaast} }
 \end{figure}
 
-The mineral mass-specific absorption coefficient was determined in the same fashion as for the chlorophyll mass-specific absorption coefficient from lab measurements of the ONTNS water sample, by dividing the absorption coefficients by the mineral concentration. The mineral mass-specific absorption coefficients are shown in \autoref{fig:SMabast}.(a). The mineral mass-specific scattering coefficients were the same used by \cite{Raqueno:2000} and \cite{Raqueno:2003} and are shown in \autoref{fig:SMabast}.(b).
+The mineral mass-specific absorption coefficient was determined by dividing the absorption coefficients measured in the lab from the water ONTNS water sample by the mineral concentration, also measured in lab (see Appendix~\ref{ch:labmea} for details about lab measurements). The mineral mass-specific absorption coefficients are shown in \autoref{fig:SMabast}.(a). The mineral mass-specific scattering coefficients were the same used by \cite{Raqueno:2000} and \cite{Raqueno:2003} and are shown in \autoref{fig:SMabast}.(b).
 
 \begin{figure}[!ht]
   \begin{minipage}[c]{0.48\linewidth}
@@ -878,7 +878,7 @@ The area of study for this research is the Lake Ontario Rochester Embayment (lat
   \caption{Area of Study. \label{fig:areaofstudy2} } 
 \end{figure}
 
-A field collection that includes water samples and remote-sensing reflectance ($R_{rs}$) measurements was conducted at the same time as the sensor overpass. The $R_{rs}$ measurements were performed using a SVC HR-1024i instrument \cite{SVCHR1024i} or a ASD instrument\todo{include reference}~ following the method described by \cite{Mobley:1999} for measuring the spectra of the downwelling irradiance $E_d$, the surface reflected sky radiance $L_s$, and the water-leaving radiance $L_w$ for each site (see Appendix~\ref{sec:fieldmea} for more details about the $R_{rs}$ measurements). Then, the water samples were analyzed in the lab, following SeaWiFS protocols described in \cite{Mueller1995} for obtaining chlorophyll-{\it a} concentration ($C_a$) and total suspended solid concentration (TSS). \autoref{tab:Sites} shows the different site names, location and the $C_a$ and $TSS$ for each site for the collection on 09-19-2013, as example. Note the difference in concentration levels between the ponds (i.e. LONGN, LONGS and CRANB) and the lake (i.e. ONTNS, ONTOS and ONTEX) samples.
+A field collection that includes water samples and remote-sensing reflectance ($R_{rs}$) measurements was conducted at the same time as the sensor overpass. The $R_{rs}$ measurements were performed using a SVC HR-1024i instrument \cite{SVCHR1024i} or a ASD instrument\todo{include reference}~ following the method described by \cite{Mobley:1999} for measuring the spectra of the downwelling irradiance $E_d$, the surface reflected sky radiance $L_s$, and the water-leaving radiance $L_w$ for each site (see Appendix~\ref{ch:fieldmea} for more details about the $R_{rs}$ measurements). Then, the water samples were analyzed in the lab, following SeaWiFS protocols described in \cite{Mueller1995} for obtaining chlorophyll-{\it a} concentration ($C_a$) and total suspended solid concentration (TSS). \autoref{tab:Sites} shows the different site names, location and the $C_a$ and $TSS$ for each site for the collection on 09-19-2013, as example. Note the difference in concentration levels between the ponds (i.e. LONGN, LONGS and CRANB) and the lake (i.e. ONTNS, ONTOS and ONTEX) samples.
 
 % Site  & $C_a$  &    Latitude  & Longitude
 % ONTNS &   ~~0.48 &  43.272159 & -77.538274  
