--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -14,7 +14,7 @@
 
 \usepackage{multirow}
 \usepackage{fullpage}
-\usepackage{appendix}
+\usepackage[titletoc,title]{appendix}
 \usepackage{setspace}
 
 \usepackage[bf, small, center]{caption}
@@ -71,15 +71,15 @@
 \renewcommand\chapter{\newpage\stdsection}  
 
 %%%%%%%%%%% for Appendix
-\makeatletter
-\newcommand\appendix@section[1]{%
-  \refstepcounter{section}%
-  \orig@section*{Appendix \@Alph\c@section: #1}%
-  \addcontentsline{toc}{section}{Appendix \@Alph\c@section: #1}%
-}
-\let\orig@section\section
-\g@addto@macro\appendix{\let\section\appendix@section}
-\makeatother
+% \makeatletter
+% \newcommand\appendix@section[1]{%
+%   \refstepcounter{section}%
+%   \orig@section*{Appendix \@Alph\c@section: #1}%
+%   \addcontentsline{toc}{section}{Appendix \@Alph\c@section: #1}%
+% }
+% \let\orig@section\section
+% \g@addto@macro\appendix{\let\section\appendix@section}
+% \makeatother
 
 
 %%%%%%%%%%%%%%
